# policy-lens

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  serve.sh
examples/: sample_policy.txt
policy_lens/: __init__.py  analyzer.py  cli.py  comparison.py  ollama_client.py  pdf_report.py  report.py
policy_lens/frameworks/: __init__.py  adobe_ccf_v5.json  cis_controls_v8.json  iso27001_2022.json  nist_800_53.json  soc2_type2.json
policy_lens/prompts/: __init__.py  layer1_extract.py  layer2_map.py  layer3_evaluate.py
tests/: test_analyzer.py  test_comparison.py  test_ollama_client.py  test_prompts.py
