[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-lens"
version = "0.1.0"
description = "Evaluate security policies against NIST 800-53 using layered LLM prompts via Ollama"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "policy-lens contributors"},
]
keywords = ["security", "compliance", "nist", "800-53", "ollama", "llm", "policy", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pypdf>=4.0",
]

[project.scripts]
policy-lens = "policy_lens.cli:main"

[project.urls]
Homepage = "https://github.com/davidalex89/policy-lens"
Issues = "https://github.com/davidalex89/policy-lens/issues"

[tool.setuptools.packages.find]
include = ["policy_lens*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
